--- a/public/index.html
+++ b/public/index.html
@@ -96,10 +96,39 @@
 				<!-- start sContact-->
 				<section class="sContact section" id="sContact">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sContact</h2>
-						</div>
-						<div class="sContact__row row">
+						<div class="sContact__wrapper">
+							<div class="sContact__row row">
+								<div class="col-sm-auto">
+									<h2>Контакты</h2>
+								</div>
+								<div class="col-12 order-md-last">
+									<h4>Для участников</h4>
+									<div class="sContact__row-sm row">
+										<div class="col-sm-auto">
+											<div class="sContact__item"><small>Адрес электронной почты</small><a href="email:example@mail.com">example@mail.com</a>
+											</div>
+										</div>
+										<div class="col-sm-auto">
+											<div class="sContact__item"><small>Телефон горячей линии</small><a href="tel:05555555555">0 555 555 55 55</a>
+											</div>
+										</div>
+										<div class="col-md">
+											<div class="soc">
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-telegram ">
+														<use xlink:href="img/svg/sprite.svg#telegram"></use>
+													</svg>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-auto order-sm-2">
+									<svg class="icon icon-sContact-logo ">
+										<use xlink:href="img/svg/sprite.svg#sContact-logo"></use>
+									</svg>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
