--- a/public/index.html
+++ b/public/index.html
@@ -136,11 +136,10 @@
 			</main>
 			<footer class="footer section">
 				<div class="container">
-					<div class="row">
-						<div class="col"></div>
-						<div class="col">Footer</div>
-						<div class="col"></div>
-						<div class="col-auto"></div>
+					<div class="footer__row row">
+						<div class="col-md-auto"><a href="#">Политика конфиденциальности</a></div>
+						<div class="col-md-auto"><a href="#">Положение о&nbsp;Конкурсе</a></div>
+						<div class="col-md-auto"><a href="#">FAQ</a></div>
 					</div>
 				</div>
 			</footer>
