--- a/public/index.html
+++ b/public/index.html
@@ -69,30 +69,52 @@
 					</div>
 				</div>
 				<!-- end headerBlock-->
-				<!-- start sForm-->
-				<section class="sForm section" id="sForm">
+				<!-- start sPrize-->
+				<section class="sPrize section" id="sPrize">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sForm</h2>
+						<div class="section-title">
+							<h2>Призовой фонд</h2>
 						</div>
-						<div class="sForm__row row">
+						<div class="sPrize__amount"> <span>1&nbsp;000&nbsp;000 руб</span><span>3&nbsp;призовых места в&nbsp;каждом кейсе</span>
 						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+						<div class="sPrize__row row">
+							<div class="col">
+								<div class="sPrize__item">
+									<div class="sPrize__sum">85&nbsp;000 руб
+									</div>
+									<div class="sPrize__position sPrize__position--second"><span>2 место</span>
+										<svg class="icon icon-star-second ">
+											<use xlink:href="img/svg/sprite.svg#star-second"></use>
+										</svg>
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+							</div>
+							<div class="col">
+								<div class="sPrize__item">
+									<div class="sPrize__sum">100&nbsp;000 руб
+									</div>
+									<div class="sPrize__position sPrize__position--first"><span>1 место</span>
+										<svg class="icon icon-star-first ">
+											<use xlink:href="img/svg/sprite.svg#star-first"></use>
+										</svg>
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="" type="text" placeholder=""/>
+							</div>
+							<div class="col">
+								<div class="sPrize__item">
+									<div class="sPrize__sum">65&nbsp;000 руб
+									</div>
+									<div class="sPrize__position sPrize__position--third"><span>3 место</span>
+										<svg class="icon icon-star-third ">
+											<use xlink:href="img/svg/sprite.svg#star-third"></use>
+										</svg>
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-							</form>
+							</div>
 						</div>
 					</div>
 				</section>
-				<!-- end sForm-->
+				<!-- end sPrize-->
 				<!-- start sContact-->
 				<section class="sContact section" id="sContact">
 					<div class="container">
