--- a/public/index.html
+++ b/public/index.html
@@ -75,39 +75,45 @@
 						<div class="section-title">
 							<h2>Призовой фонд</h2>
 						</div>
-						<div class="sPrize__amount"> <span>1&nbsp;000&nbsp;000 руб</span><span>3&nbsp;призовых места в&nbsp;каждом кейсе</span>
+						<div class="sPrize__amount"> <b>1&nbsp;000&nbsp;000 руб</b><span>3&nbsp;призовых места в&nbsp;каждом кейсе</span>
 						</div>
 						<div class="sPrize__row row">
-							<div class="col">
+							<div class="col-lg-4">
 								<div class="sPrize__item">
-									<div class="sPrize__sum">85&nbsp;000 руб
-									</div>
-									<div class="sPrize__position sPrize__position--second"><span>2 место</span>
-										<svg class="icon icon-star-second ">
-											<use xlink:href="img/svg/sprite.svg#star-second"></use>
-										</svg>
-									</div>
-								</div>
-							</div>
-							<div class="col">
-								<div class="sPrize__item">
-									<div class="sPrize__sum">100&nbsp;000 руб
+									<div class="sPrize__sum d-none d-lg-block">100&nbsp;000 руб
 									</div>
 									<div class="sPrize__position sPrize__position--first"><span>1 место</span>
 										<svg class="icon icon-star-first ">
 											<use xlink:href="img/svg/sprite.svg#star-first"></use>
 										</svg>
+										<div class="sPrize__sum d-lg-none">100&nbsp;000 руб
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col">
+							<div class="col-lg-4 order-lg-first">
 								<div class="sPrize__item">
-									<div class="sPrize__sum">65&nbsp;000 руб
+									<div class="sPrize__sum d-none d-lg-block">85&nbsp;000 руб
+									</div>
+									<div class="sPrize__position sPrize__position--second"><span>2 место</span>
+										<svg class="icon icon-star-second ">
+											<use xlink:href="img/svg/sprite.svg#star-second"></use>
+										</svg>
+										<div class="sPrize__sum d-lg-none">85&nbsp;000 руб
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="sPrize__item">
+									<div class="sPrize__sum d-none d-lg-block">65&nbsp;000 руб
 									</div>
 									<div class="sPrize__position sPrize__position--third"><span>3 место</span>
 										<svg class="icon icon-star-third ">
 											<use xlink:href="img/svg/sprite.svg#star-third"></use>
 										</svg>
+										<div class="sPrize__sum d-lg-none">65&nbsp;000 руб
+										</div>
 									</div>
 								</div>
 							</div>
