--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 								<div class="sPrize__item">
 									<div class="sPrize__sum d-none d-lg-block">100&nbsp;000 руб
 									</div>
-									<div class="sPrize__position sPrize__position--first"><span>1 место</span>
+									<div class="sPrize__position sPrize__position--first"><span>1&nbsp;место</span>
 										<svg class="icon icon-star-first ">
 											<use xlink:href="img/svg/sprite.svg#star-first"></use>
 										</svg>
@@ -95,7 +95,7 @@
 								<div class="sPrize__item">
 									<div class="sPrize__sum d-none d-lg-block">85&nbsp;000 руб
 									</div>
-									<div class="sPrize__position sPrize__position--second"><span>2 место</span>
+									<div class="sPrize__position sPrize__position--second"><span>2&nbsp;место</span>
 										<svg class="icon icon-star-second ">
 											<use xlink:href="img/svg/sprite.svg#star-second"></use>
 										</svg>
@@ -108,7 +108,7 @@
 								<div class="sPrize__item">
 									<div class="sPrize__sum d-none d-lg-block">65&nbsp;000 руб
 									</div>
-									<div class="sPrize__position sPrize__position--third"><span>3 место</span>
+									<div class="sPrize__position sPrize__position--third"><span>3&nbsp;место</span>
 										<svg class="icon icon-star-third ">
 											<use xlink:href="img/svg/sprite.svg#star-third"></use>
 										</svg>
