--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,33 @@
 					</div>
 				</div>
 				<!-- end headerBlock-->
+				<!-- start sProcedure-->
+				<section class="sProcedure section" id="sProcedure">
+					<div class="container">
+						<div class="section-title">
+							<h2>Что нужно сделать?</h2>
+						</div>
+						<div class="sProcedure__row row">
+							<div class="col-lg-3">
+								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Зарегистрируйся <br> на&nbsp;хакатон</b>
+								</div>
+							</div>
+							<div class="col-lg-3">
+								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Собери <br> команду</b>
+								</div>
+							</div>
+							<div class="col-lg-3">
+								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Выбери <br> кейс</b>
+								</div>
+							</div>
+							<div class="col-lg-3">
+								<div class="sProcedure__item"><span>17&minus;19 февраля</span><b>Создай <br> решение</b>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sProcedure-->
 				<!-- start sPrize-->
 				<section class="sPrize section" id="sPrize">
 					<div class="container">
