--- a/public/index.html
+++ b/public/index.html
@@ -76,19 +76,28 @@
 							<h2>Что нужно сделать?</h2>
 						</div>
 						<div class="sProcedure__row row">
-							<div class="col-lg-3">
+							<div class="sProcedure__col col-lg-3">
+								<svg class="icon icon-curved-arrow-1 ">
+									<use xlink:href="img/svg/sprite.svg#curved-arrow-1"></use>
+								</svg>
 								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Зарегистрируйся <br> на&nbsp;хакатон</b>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="sProcedure__col col-lg-3">
+								<svg class="icon icon-curved-arrow-2 ">
+									<use xlink:href="img/svg/sprite.svg#curved-arrow-2"></use>
+								</svg>
 								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Собери <br> команду</b>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="sProcedure__col col-lg-3">
+								<svg class="icon icon-curved-arrow-3 ">
+									<use xlink:href="img/svg/sprite.svg#curved-arrow-3"></use>
+								</svg>
 								<div class="sProcedure__item"><span>25&nbsp;января&nbsp;&minus; 14&nbsp;февраля</span><b>Выбери <br> кейс</b>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="sProcedure__col col-lg-3">
 								<div class="sProcedure__item"><span>17&minus;19 февраля</span><b>Создай <br> решение</b>
 								</div>
 							</div>
