--- a/public/index.html
+++ b/public/index.html
@@ -39,13 +39,13 @@
 												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">FAQ</a></li>
 											</ul>
 										</nav>
-										<a class="top-nav__btn btn btn-success d-xl-none" href="#">Регистрация
+										<a class="top-nav__btn btn btn-success d-xl-none" href="#">Регистрация/Войти
 										</a>
 									</div>
 								</div>
 							</div>
 							<div class="col-auto d-none d-xl-inline-block">
-								<a class="top-nav__btn btn btn-success" href="#">Регистрация
+								<a class="top-nav__btn btn btn-success" href="#">Регистрация/Войти
 								</a>
 							</div>
 							<div class="col-auto order-xl-first">
@@ -61,14 +61,42 @@
 			<main>
 				<!-- start headerBlock-->
 				<div class="headerBlock section" id="headerBlock">
-					<div class="container">
-						<div class="section-title text-center">
-							<h2>Эксперты и Жюри</h2>
+					<div class="container"> 
+						<div class="headerBlock__text-wrap text-wrap">
+							<div class="headerBlock__head"><{ Кодим вместе  17 — 19 февраля! }>
+							</div>
+							<div class="headerBlock__img-wrap">
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/head-img.webp"/><img src="img/@2x/head-img.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+							<h1>Молодёжный бит</h1>
+							<p>Всероссийский хакатон <br> для талантливых IT-специалистов</p>
+							<ul>
+								<li>Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей</li>
+								<li>Приходи кодить на&nbsp;офлайн-площадку в&nbsp;Москве</li>
+								<li>Участвуй онлайн из&nbsp;любой точки страны</li>
+								<li>Регистрируйся до&nbsp;14&nbsp;февраля</li>
+							</ul>
+							<a class="headerBlock__btn btn btn-success" href="#">Зарегистрироваться
+							</a>
 						</div>
-						<div class="row"></div>
 					</div>
 				</div>
 				<!-- end headerBlock-->
+				<!-- start sAbout-->
+				<section class="sAbout section" id="sAbout">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sAbout</h2>
+						</div>
+						<div class="sAbout__row row">
+						</div>
+					</div>
+				</section>
+				<!-- end sAbout-->
 				<!-- start sProcedure-->
 				<section class="sProcedure section" id="sProcedure">
 					<div class="container">
