--- a/public/index.html
+++ b/public/index.html
@@ -87,16 +87,53 @@
 				</div>
 				<!-- end headerBlock-->
 				<!-- start sAbout-->
-				<section class="sAbout section" id="sAbout">
+				<div class="sAbout section" id="sAbout">
+					<div class="container">
+						<div class="sAbout__row row">
+							<div class="col-md-auto">
+								<div class="sAbout__item sAbout__item--left">
+									<div>
+										<div class="sAbout__number">48
+										</div>
+										<div class="sAbout__number-text">часов <br> кодинга
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="sAbout__text-wrap text-wrap col-md">
+								<p>Молодёжный бит&nbsp;&mdash;  твоя возможность</p>
+								<ul>
+									<li>поработать над реальными кейсами и&nbsp;побороться за&nbsp;призовой фонд</li>
+									<li>прокачать IT-навыки и&nbsp;посоревноваться с&nbsp;опытными участниками</li>
+									<li>собрать яркую команду и&nbsp;запустить собственный проект</li>
+									<li>получить поддержку топовых экспертов <br> IT-индустрии</li>
+								</ul>
+							</div>
+							<div class="col-auto">
+								<div class="sAbout__item sAbout__item--right">
+									<div class="sAbout__number-text">Команда
+									</div>
+									<div class="sAbout__number">3-5
+									</div>
+									<div class="sAbout__number-text sAbout__number-text--sm">человек
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end sAbout-->
+				<!-- start sTeam-->
+				<section class="sTeam section" id="sTeam">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sAbout</h2>
+							<h2>sTeam</h2>
 						</div>
-						<div class="sAbout__row row">
+						<div class="sTeam__row row">
 						</div>
 					</div>
 				</section>
-				<!-- end sAbout-->
+				<!-- end sTeam-->
 				<!-- start sProcedure-->
 				<section class="sProcedure section" id="sProcedure">
 					<div class="container">
