--- a/public/index.html
+++ b/public/index.html
@@ -263,14 +263,233 @@
 				<!-- start sPersons-->
 				<section class="sPersons section" id="sPersons">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sPersons</h2>
+						<div class="section-title">
+							<h2>Эксперты и Жюри</h2>
 						</div>
-						<div class="sPersons__row row">
+						<div class="sPersons__title">Эксперты
+						</div>
+						<div class="sPersons__slider sPersons__slider--js swiper">
+							<div class="swiper-wrapper">
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+							</div>
+								<div class="row">
+									<div class="col">
+										<div class="swiper-pagination"></div>
+									</div>
+									<div class="col-auto">
+										<div class="arrow-wrap">
+											<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+												<svg class="icon icon-arrow-left ">
+													<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+												</svg>
+											</div>
+											<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+												<svg class="icon icon-arrow-right ">
+													<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+						<div class="sPersons__title">Жюри
+						</div>
+						<div class="sPersons__slider sPersons__slider--js swiper">
+							<div class="swiper-wrapper">
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктор Сожможнов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Виктория Складчинкова
+											</div>
+											<div class="sPersons__text">Прототип будущего проекта способствует
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Ким Самаджокис
+											</div>
+											<div class="sPersons__text">Следует отметить
+											</div>
+										</div>
+									</div>
+									<div class="sPersons__slide swiper-slide">
+										<div class="sPersons__item">
+											<div class="sPersons__img-wrap"><img src="img/avatar.png" alt="" loading="lazy"/>
+											</div>
+											<div class="sPersons__name">Николай Ионов
+											</div>
+											<div class="sPersons__text">Следует отметить, что высококачественный 
+											</div>
+										</div>
+									</div>
+							</div>
+								<div class="row">
+									<div class="col">
+										<div class="swiper-pagination"></div>
+									</div>
+									<div class="col-auto">
+										<div class="arrow-wrap">
+											<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+												<svg class="icon icon-arrow-left ">
+													<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+												</svg>
+											</div>
+											<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+												<svg class="icon icon-arrow-right ">
+													<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</div>
 						</div>
 					</div>
 				</section>
 				<!-- end sPersons-->
+				<!-- start sLogos-->
+				<section class="sLogos section" id="sLogos">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sLogos</h2>
+						</div>
+						<div class="sLogos__row row">
+						</div>
+					</div>
+				</section>
+				<!-- end sLogos-->
 				<!-- start sContact-->
 				<section class="sContact section" id="sContact">
 					<div class="container">
