--- a/public/index.html
+++ b/public/index.html
@@ -512,10 +512,262 @@
 				<!-- start sLogos-->
 				<section class="sLogos section" id="sLogos">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sLogos</h2>
+						<div class="section-title">
+							<h2>Организаторы и партнёры</h2>
 						</div>
-						<div class="sLogos__row row">
+						<div class="sLogos__title-sub"> Организаторы
+						</div>
+						<div class="sLogos__slider-wrap">
+							<div class="sLogos__slider sLogos__slider--js swiper-slider">
+								<div class="swiper-wrapper">
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+								</div>
+									<div class="row">
+										<div class="col">
+											<div class="swiper-pagination"></div>
+										</div>
+										<div class="col-auto">
+											<div class="arrow-wrap">
+												<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+													<svg class="icon icon-arrow-left ">
+														<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+													</svg>
+												</div>
+												<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+													<svg class="icon icon-arrow-right ">
+														<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+													</svg>
+												</div>
+											</div>
+										</div>
+									</div>
+							</div>
+						</div>
+						<div class="sLogos__title-sub"> Партнеры
+						</div>
+						<div class="sLogos__slider-wrap">
+							<div class="sLogos__slider sLogos__slider--js swiper-slider">
+								<div class="swiper-wrapper">
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+									<div class="sLogos__slide swiper-slide">
+										<div class="sLogos__item">
+											<div class="sLogos__img-wrap"> 
+												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
+												</div>
+											</div>
+											<div class="sLogos__title">Федеральное агентство по делам молодёжи
+											</div>
+										</div>
+									</div>
+								</div>
+									<div class="row">
+										<div class="col">
+											<div class="swiper-pagination"></div>
+										</div>
+										<div class="col-auto">
+											<div class="arrow-wrap">
+												<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+													<svg class="icon icon-arrow-left ">
+														<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+													</svg>
+												</div>
+												<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+													<svg class="icon icon-arrow-right ">
+														<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+													</svg>
+												</div>
+											</div>
+										</div>
+									</div>
+							</div>
 						</div>
 					</div>
 				</section>
