--- a/public/index.html
+++ b/public/index.html
@@ -621,7 +621,7 @@
 										</div>
 									</div>
 								</div>
-									<div class="row">
+									<div class="row d-lg-none">
 										<div class="col">
 											<div class="swiper-pagination"></div>
 										</div>
@@ -748,7 +748,7 @@
 										</div>
 									</div>
 								</div>
-									<div class="row">
+									<div class="row d-lg-none">
 										<div class="col">
 											<div class="swiper-pagination"></div>
 										</div>
