--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,28 @@
 							</div>
 							<div class="tabs__wrap">
 								<div class="tabs__content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus impedit sint recusandae ad repellat, dolorem odit ipsam ullam ea. Autem odit quidem iste quam assumenda?</p>
+									<div class="tabs__content-wrap">
+										<h4>Дашборд регионов</h4>
+										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+									</div>
+									<div class="tabs__row row">
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-video ">
+													<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+												</svg><span>Видеоинтервью</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-project ">
+													<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
+												</svg><span>Презентация кейса</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sContact-win ">
+													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
+												</svg><span>Победители и&nbsp;призеры</span></a></div>
+										<div class="col-xl order-xl-first">
+											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
+										</div>
+									</div>
 								</div>
 								<div class="tabs__content active">
 									<div class="tabs__content-wrap">
@@ -230,10 +251,52 @@
 									</div>
 								</div>
 								<div class="tabs__content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus impedit sint recusandae ad repellat?</p>
+									<div class="tabs__content-wrap">
+										<h4>Росмолодёжь-Digital</h4>
+										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+									</div>
+									<div class="tabs__row row">
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-video ">
+													<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+												</svg><span>Видеоинтервью</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-project ">
+													<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
+												</svg><span>Презентация кейса</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sContact-win ">
+													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
+												</svg><span>Победители и&nbsp;призеры</span></a></div>
+										<div class="col-xl order-xl-first">
+											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
+										</div>
+									</div>
 								</div>
 								<div class="tabs__content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo dignissimos possimus alias eaque ducimus!</p>
+									<div class="tabs__content-wrap">
+										<h4>Объединяя молодёжь</h4>
+										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+									</div>
+									<div class="tabs__row row">
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-video ">
+													<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+												</svg><span>Видеоинтервью</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sCases-project ">
+													<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
+												</svg><span>Презентация кейса</span></a></div>
+										<div class="col-auto"><a class="tabs__content-link" href="#">
+												<svg class="icon icon-sContact-win ">
+													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
+												</svg><span>Победители и&nbsp;призеры</span></a></div>
+										<div class="col-xl order-xl-first">
+											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
