--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 			<!-- end header-->
 			<main>
 				<!-- start headerBlock-->
-				<div class="headerBlock section" id="headerBlock">
+				<div class="headerBlock section" id="headerBlock"><img src="img/page-bg-img-1.png" alt="" loading="lazy"/>
 					<div class="container"> 
 						<div class="headerBlock__text-wrap text-wrap">
 							<div class="headerBlock__head"><{ Кодим вместе  17 — 19 февраля! }>
@@ -304,7 +304,7 @@
 				</section>
 				<!-- end sCases-->
 				<!-- start sPrize-->
-				<section class="sPrize section" id="sPrize">
+				<section class="sPrize section" id="sPrize"><img src="img/page-bg-img-2.png" alt="" loading="lazy"/>
 					<div class="container">
 						<div class="section-title">
 							<h2>Призовой фонд</h2>
@@ -575,7 +575,7 @@
 				</section>
 				<!-- end sPersons-->
 				<!-- start sLogos-->
-				<section class="sLogos section" id="sLogos">
+				<section class="sLogos section" id="sLogos"><img src="img/page-bg-img-3.png" alt="" loading="lazy"/>
 					<div class="container">
 						<div class="section-title">
 							<h2>Организаторы и партнёры</h2>
@@ -878,7 +878,7 @@
 				</section>
 				<!-- end sContact-->
 			</main>
-			<footer class="footer section">
+			<footer class="footer section"><img src="img/page-bg-img-4.png" alt="" loading="lazy"/>
 				<div class="container">
 					<div class="footer__row row">
 						<div class="col-md-auto"><a href="#">Политика конфиденциальности</a></div>
