--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 				<div class="headerBlock section" id="headerBlock"><img src="img/page-bg-img-1.png" alt="" loading="lazy"/>
 					<div class="container"> 
 						<div class="headerBlock__text-wrap text-wrap">
-							<div class="headerBlock__head"><{ Кодим вместе  17 — 19 февраля! }>
+							<div class="headerBlock__head">&lt;{ Кодим вместе 17&nbsp;&mdash; 19&nbsp;февраля! }&gt;
 							</div>
 							<div class="headerBlock__img-wrap">
 								<!-- picture-->
@@ -221,9 +221,7 @@
 												<svg class="icon icon-sContact-win ">
 													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 												</svg><span>Победители и&nbsp;призеры</span></a></div>
-										<div class="col-xl order-xl-first">
-											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
-										</div>
+										<div class="col-xl order-xl-first"><a class="tabs__content-btn" href="#">Хочу решить кейс!</a></div>
 									</div>
 								</div>
 								<div class="tabs__content active">
@@ -245,9 +243,7 @@
 												<svg class="icon icon-sContact-win ">
 													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 												</svg><span>Победители и&nbsp;призеры</span></a></div>
-										<div class="col-xl order-xl-first">
-											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
-										</div>
+										<div class="col-xl order-xl-first"><a class="tabs__content-btn" href="#">Хочу решить кейс!</a></div>
 									</div>
 								</div>
 								<div class="tabs__content">
@@ -269,9 +265,7 @@
 												<svg class="icon icon-sContact-win ">
 													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 												</svg><span>Победители и&nbsp;призеры</span></a></div>
-										<div class="col-xl order-xl-first">
-											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
-										</div>
+										<div class="col-xl order-xl-first"><a class="tabs__content-btn" href="#">Хочу решить кейс!</a></div>
 									</div>
 								</div>
 								<div class="tabs__content">
@@ -293,9 +287,7 @@
 												<svg class="icon icon-sContact-win ">
 													<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
 												</svg><span>Победители и&nbsp;призеры</span></a></div>
-										<div class="col-xl order-xl-first">
-											<div class="tabs__content-btn" href="#">Хочу решить кейс!</div>
-										</div>
+										<div class="col-xl order-xl-first"><a class="tabs__content-btn" href="#">Хочу решить кейс!</a></div>
 									</div>
 								</div>
 							</div>
