--- a/public/index.html
+++ b/public/index.html
@@ -837,32 +837,37 @@
 								<div class="col-sm-auto">
 									<h2>Контакты</h2>
 								</div>
-								<div class="col-12 order-md-last">
-									<h4>Для участников</h4>
+								<div class="col-12">
 									<div class="sContact__row-sm row">
 										<div class="col-sm-auto">
+											<h4>Для участников</h4>
 											<div class="sContact__item"><small>Адрес электронной почты</small><a href="email:example@mail.com">example@mail.com</a>
 											</div>
 										</div>
 										<div class="col-sm-auto">
-											<div class="sContact__item"><small>Телефон горячей линии</small><a href="tel:05555555555">0 555 555 55 55</a>
-											</div>
-										</div>
-										<div class="col-md">
-											<div class="soc">
-												<a class="soc__item" href="#" target="_blank">
-													<svg class="icon icon-telegram ">
-														<use xlink:href="img/svg/sprite.svg#telegram"></use>
-													</svg>
+											<div class="social">
+												<a class="social__link" href="#" target="_blank">
+													<div class="social__icon">
+														<svg class="icon icon-telegram ">
+															<use xlink:href="img/svg/sprite.svg#telegram"></use>
+														</svg>
+													</div><span>Telegram-канал хакатона</span>
+												</a>
+												<a class="social__link" href="#" target="_blank">
+													<div class="social__icon">
+														<svg class="icon icon-telegram ">
+															<use xlink:href="img/svg/sprite.svg#telegram"></use>
+														</svg>
+													</div><span>Чат по&nbsp;поиску команды</span>
 												</a>
 											</div>
 										</div>
+										<div class="col-lg text-lg-end">
+											<svg class="icon icon-sContact-logo ">
+												<use xlink:href="img/svg/sprite.svg#sContact-logo"></use>
+											</svg>
+										</div>
 									</div>
-								</div>
-								<div class="col-sm-auto order-sm-2">
-									<svg class="icon icon-sContact-logo ">
-										<use xlink:href="img/svg/sprite.svg#sContact-logo"></use>
-									</svg>
 								</div>
 							</div>
 						</div>
