--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,25 @@
 												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">FAQ</a></li>
 											</ul>
 										</nav>
+										<div class="soc d-xl-none">
+											<a class="soc__item" href="#" target="_blank">
+												<svg class="icon icon-telegram ">
+													<use xlink:href="img/svg/sprite.svg#telegram"></use>
+												</svg>
+											</a>
+										</div>
 										<a class="top-nav__btn btn btn-success d-xl-none" href="#">Регистрация/Войти
 										</a>
 									</div>
+								</div>
+							</div>
+							<div class="col-auto d-none d-xl-flex">
+								<div class="soc">
+									<a class="soc__item" href="#" target="_blank">
+										<svg class="icon icon-telegram ">
+											<use xlink:href="img/svg/sprite.svg#telegram"></use>
+										</svg>
+									</a>
 								</div>
 							</div>
 							<div class="col-auto d-none d-xl-inline-block">
