--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
 										</div>
 										<nav>
 											<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О хакатоне</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Для кого</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Кейсы</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Эксперты</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Организаторы</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sAbout" itemprop="url">О хакатоне</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sTeam" itemprop="url">Для кого</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sCases" itemprop="url">Кейсы</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sPersons" itemprop="url">Эксперты</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sLogos" itemprop="url">Организаторы</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sContact" itemprop="url">Контакты</a></li>
 												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">FAQ</a></li>
 											</ul>
 										</nav>
